GOVSI-670: Protect transitions in `LoginHandler`